--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,22 @@
 {
- "name": "Inventory Extension",
- "type": "typo3-cms-extension",
- "description": "Inventory",
- "homepage": "http://www.nummer1.wien",
- "license": [
- "GPL-2.0+"
- ],
- "version": "0.0.1-dev"
+	"name": "MyVendor/Inventory",
+	"type": "typo3-cms-extension",
+	"description": "",
+	"minimum-stability": "alpha",
+	"license": "proprietary",
+	"authors": [
+		{
+			"name": "Ph",
+			"email": "philip.strobach@gmail.com"
+		}
+	],
+	"replace": {
+         "inventory": "self.version",
+         "typo3-ter/inventory": "self.version"
+       },
+	"autoload": {
+		"psr-4": {
+			"MyVendor\\Inventory\\": "Classes/"
+		}
+	}
 }
